Fixed colour of the links
Previous push accidentally spilled colour on to every blue element

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -127,13 +127,13 @@ input, select, textarea {
 		-webkit-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 		-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
 		transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-		color: #fb9637;
+		color: #37c0fb;
 		text-decoration: none;
 		border-bottom: dotted 1px;
 	}
 
 		a:hover {
-			color: #fb9637;
+			color: #37c0fb;
 			border-bottom-color: transparent;
 		}
 
@@ -2045,7 +2045,7 @@ input, select, textarea {
 		input[type="password"]:focus,
 		input[type="email"]:focus,
 		textarea:focus {
-			border-color: #fb9637;
+			border-color: #37c0fb;
 		}
 
 	input[type="text"],
@@ -2166,7 +2166,7 @@ input, select, textarea {
 		.icon.major {
 			text-align: center;
 			cursor: default;
-			background-color: #fb9637;
+			background-color: #37c0fb;
 			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
@@ -2434,7 +2434,7 @@ input, select, textarea {
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 		background-image: linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
-		background-color: #fb9637;
+		background-color: #37c0fb;
 		border-radius: 5px;
 		border: 0;
 		color: #fff;
@@ -2584,7 +2584,7 @@ input, select, textarea {
 			display: block;
 			width: 100%;
 			height: 0.75em;
-			/*background-color: #fb9637;*/
+			/*background-color: #37c0fb;*/
 			background-color: #fb9637;
 			background-image: url("images/bg01.png");
 		}
@@ -2632,7 +2632,7 @@ input, select, textarea {
 						bottom: -0.5em;
 						left: 50%;
 						margin-left: -0.375em;
-						/*background-color: #fb9637;*/
+						/*background-color: #37c0fb;*/
 						background-color: #fb9637;
 						background-image: url("images/bg01.png");
 					}
@@ -2757,7 +2757,7 @@ input, select, textarea {
 		}
 
 		.wrapper.style3 {
-			background-color: #fb9637;
+			background-color: #37c0fb;
 			background-image: -moz-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -webkit-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
 			background-image: -ms-linear-gradient(top, rgba(0,0,0,0), rgba(0,0,0,0.15)), url("images/bg01.png");
@@ -2771,7 +2771,7 @@ input, select, textarea {
 			}
 
 				.wrapper.style3 .button:hover {
-					color: #fb9637 !important;
+					color: #37c0fb !important;
 				}
 
 /* CTA */
@@ -2804,7 +2804,7 @@ input, select, textarea {
 		}
 
 			#footer a:hover {
-				color: #fb9637;
+				color: #37c0fb;
 				border-bottom-color: transparent;
 			}
 
